<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:text="@string/welcome_to_autosuggest"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.what3words.components.text.W3WAutoSuggestEditText
            android:id="@+id/suggestionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_s"
            android:layout_marginEnd="@dimen/main_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:elevation="1dp"
            app:layout_constraintBottom_toTopOf="@+id/suggestionEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.what3words.components.picker.W3WAutoSuggestCorrectionPicker
            android:id="@+id/correctionPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_s"
            android:layout_marginTop="@dimen/main_l"
            android:layout_marginEnd="@dimen/main_s"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/suggestionEditText" />

        <TextView
            android:id="@+id/selectedInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/large_margin"
            android:textSize="16sp"
            android:textStyle="bold"
...
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkboxCustomCorrectionPicker" />

        <CheckBox
            android:id="@+id/checkboxAllowFlexibleDelimiters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_s"
            android:layout_marginTop="@dimen/main_s"
            android:layout_marginEnd="@dimen/main_s"
            android:checked="false"
...
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/holderClipToCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/main_m"
            android:layout_marginEnd="@dimen/main_s"
            android:hint="@string/clip_to_country_hint"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/holderFocus">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textClipToCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/holderClipToCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_s"
            android:layout_marginTop="@dimen/main_m"
            android:layout_marginEnd="@dimen/main_s"
            android:hint="@string/clip_to_circle_hint"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/holderClipToCountry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textClipToCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/holderClipToBoundingBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_s"
            android:layout_marginTop="@dimen/main_m"
            android:layout_marginEnd="@dimen/main_s"
            android:hint="@string/clip_to_box_hint"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/holderClipToCircle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textClipToBoundingBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

...
