...
        app:layout_constraintBottom_toBottomOf="@+id/autosuggestVoiceHolder"
        app:layout_constraintEnd_toEndOf="@+id/autosuggestVoiceHolder"
        app:layout_constraintStart_toStartOf="@+id/autosuggestVoiceHolder"
        app:layout_constraintTop_toTopOf="@+id/autosuggestVoiceHolder" />

    <ImageView
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true"
        android:scaleType="fitCenter"
...
